# jocky

./: .gitignore  Cargo.toml  Dockerfile  README.md  extract.py  sample-0.json  sample-1.json  sample-2.json  sample-3.json  sample-4.json  zstd-test.py
src/: directory.rs  document.rs  fragments.rs  lib.rs  metadata.rs  schema.rs
src/actors/: aio_writer.rs  exporter.rs  indexer.rs  messages.rs  mod.rs  writer.rs
src/actors/writers/: aio.rs  blocking.rs  mod.rs
src/compress/: mod.rs  train.rs
src/directories/: merger.rs  mod.rs  reader.rs  writer.rs
src/doc_block/: encoding.rs  mod.rs  processor.rs  writer.rs
