[package]
name = "jocky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.3"
bytecheck = "0.6.9"
futures-lite = "1.12.0"
parking_lot = "0.12.1"
itertools = "0.10.5"
flume = "0.10.14"
memmap2 = "0.5.8"

zstd = "0.12.1+zstd.1.5.2"
clap = { version = "4", features = ["derive"] }

# Debugging
anyhow = "1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

humansize = "2.1.3"

puppet = { version = "0.4.0", default-features = false }
tokio = { version = "1", features = ["full"] }
rkyv = { version = "0.7.39", features = ["validation"] }
serde = { version = "1", features = ["derive"] }

datacake-crdt = { version = "0.4.0", features = ["rkyv-support"] }

